--- a/public/game.html
+++ b/public/game.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="gv" content="1.0" />
+        <meta name="gv" content="1.1" />
         <meta name="gi" content="Mines" />
-        <meta name="gs" content="MinesYR">
+        <meta name="gs" content="MINESS">
         <title>Mines</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="game.css" />
