--- a/public/game.html
+++ b/public/game.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="gv" content="1.1" />
-        <meta name="gi" content="Mines" />
+        <meta name="gi" content="mines" />
         <meta name="gs" content="MINESS">
         <title>Mines</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
