feat: add qrs. id prefix

--- a/public/game.html
+++ b/public/game.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
 
         <meta name="gv" content="1.2" />
-        <meta name="gi" content="mines" />
+        <meta name="gi" content="qrs.mines" />
         <meta name="gs" content="MINESS">
         <title>Mines</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
